test/error/rtc/con1.rzy
// error: loop in connection graph for sub

component
  Dummy
    input
      in();
      
    output
      out();
      
  implementation elementary
    function in()
      out();
    end
  end

  Con1
    input
      in();
      
    output
      out();
      
  implementation composition
    component
      sub : Dummy;
      
    connection
      in -> out;
      sub.out -> sub.in;

  end

